--- a/src/index.html
+++ b/src/index.html
@@ -5,33 +5,46 @@
     <meta charset="UTF-8">
     <meta name="viewport"
         content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover">
-    <link rel="stylesheet" href="./style.css">
     <style>
+        /* 公共部分css */
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
         }
+
         *::before,
         *::after {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
         }
+
         .wrapper {
             position: relative;
             display: flex;
             background: rgb(192, 51, 53);
+            overflow: hidden;
+
         }
-        .buttons{
+
+        #code {
+            height: 100vh;
+            width: 50vw;
+            background: whitesmoke;
+            overflow: auto;
+        }
+
+        .buttons {
             position: absolute;
             left: 50%;
         }
-        .buttons > button{
+
+        .buttons>button {
             width: 60px;
             height: 30px;
             border: none;
-            background: rgba(255,255,255);
+            background: rgba(255, 255, 255);
             font-weight: bold;
             border-radius: 5px;
             margin-left: 5px;
